objects/Trail__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trail</relationshipLabel>
        <relationshipName>Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Trail</relationshipLabel>
        <relationshipName>Trail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>